Upgraded gradle wrapper to 7.6 and Jenkins to build using JDK 17