@@ -1,23 +1,41 @@
+import static org.gradle.api.JavaVersion.VERSION_11
+
 buildscript {
     ext {
         corda_release_group = 'net.corda'
-        corda_release_version = '4.8.11'
+        corda_release_version = '4.12-202309-01'
         tokens_release_group = 'com.r3.corda.lib.tokens'
-        tokens_release_version = '1.1'
+        tokens_release_version = '1.3-202309-01'
         accounts_release_group = 'com.r3.corda.lib.accounts'
-        accounts_release_version = '1.1-SNAPSHOT'
-        corda_gradle_plugins_version = '5.0.12'
+        accounts_release_version = '1.2-202309-01'
+        tokens_release_group = 'com.r3.corda.lib.tokens'
+        tokens_release_version = '1.3-202309-01'
+        confidential_id_release_group = "com.r3.corda.lib.ci"
+        confidential_id_release_version = "1.2-202309-01"
+
+        corda_gradle_plugins_version = '5.1.1'
         mavenVersion = '3.1.0'
         maven_resolver_version = "1.1.1"
-        kotlin_version = '1.2.71'
+        kotlin_version = '1.9.0'
         junit_version = '4.12'
-        quasar_version = '0.7.10'
+        quasar_version = '0.9.0_r3'
         log4j_version = '2.9.1'
-        confidential_id_release_group = "com.r3.corda.lib.ci"
-        confidential_id_release_version = "1.0"
-        spring_boot_version = '2.0.2.RELEASE'
-        spring_boot_gradle_plugin_version = '2.0.2.RELEASE'
-        publicArtifactURL='https://download.corda.net/maven'
+        spring_boot_version = '3.1.2'
+        hibernate_version = '5.6.14.Final'
+        servlet_version = '4.0.1'
+
+        test_module_opens = [
+                '--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED'
+        ]
+        test_module_exports = [
+                '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
     }
 
     repositories {
@@ -31,58 +49,66 @@ buildscript {
         classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
-        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
     }
 }
 
 plugins {
-    id "com.jfrog.artifactory" version "4.7.5"
+    id 'org.jetbrains.kotlin.plugin.jpa' version "$kotlin_version" apply false
+    id 'org.springframework.boot' version '3.1.2' apply false
+    id "org.ajoberstar.grgit" version "4.0.0"
+    id 'corda.root-publish'
+}
+
+// If the command line project option -PversionFromGit is added to the gradle invocation, we'll resolve
+// the latest git commit hash and timestamp and create a version postfix from that
+if (project.hasProperty("versionFromGit")) {
+    ext.versionSuffix = "202309-01"
+}
+
+if (ext.versionSuffix != "") {
+    ext.accounts_release_version = "${ext.baseVersion}-${ext.versionSuffix}".toString()
+} else {
+    ext.accounts_release_version = "${ext.baseVersion}".toString()
 }
 
 allprojects {
     version accounts_release_version
-    group accounts_release_group
-
-    configurations.all {
-        resolutionStrategy {
-            // Force dependencies to use the same version of Kotlin
-            force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-            force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-            force "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-            force "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-            force "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-        }
-    }
 }
 
 subprojects {
-    buildscript {
-        repositories {
-            jcenter()
-            mavenCentral()
-        }
-    }
-
-    apply plugin: 'kotlin'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'net.corda.plugins.quasar-utils'
 
     repositories {
         mavenLocal()
         jcenter()
         mavenCentral()
-        maven { url "${publicArtifactURL}/corda-dev" }
         maven { url "${publicArtifactURL}/corda-releases" }
         maven { url "${publicArtifactURL}/corda-dependencies" }
         maven { url "${publicArtifactURL}/corda-lib" }
-        maven { url "${publicArtifactURL}/corda-lib-dev" }
+        maven {
+            url "${artifactoryContextUrl}/corda-dev"
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
+        maven {
+            url "${artifactoryContextUrl}/corda-lib-dev"
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
         maven { url "https://repo.gradle.org/gradle/libs-releases-local" }
         maven { url 'https://jitpack.io' }
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         kotlinOptions {
-            languageVersion = "1.2"
-            apiVersion = "1.2"
-            jvmTarget = "1.8"
+            languageVersion = "1.8"
+            apiVersion = "1.8"
+            jvmTarget = VERSION_11
             javaParameters = true   // Useful for reflection.
         }
     }
@@ -92,24 +118,50 @@ subprojects {
         minHeapSize = "128m"
         maxHeapSize = "4096m"
     }
+
+    quasar {
+        excludePackages.addAll(
+                "antlr**",
+                "com.codahale**",
+                "com.fasterxml.**",
+                "com.github.benmanes.caffeine.**",
+                "com.google.**",
+                "com.lmax.**",
+                "com.zaxxer.**",
+                "net.bytebuddy**",
+                "io.github.classgraph**",
+                "io.netty*",
+                "liquibase**",
+                "net.i2p.crypto.**",
+                "nonapi.io.github.classgraph.**",
+                "org.apiguardian.**",
+                "org.bouncycastle**",
+                "org.codehaus.**",
+                "org.h2**",
+                "org.hibernate**",
+                "org.jboss.**",
+                "org.objenesis**",
+                "org.w3c.**",
+                "org.xml**",
+                "org.yaml**",
+                "rx**",
+                "kotlin**"
+        )
+    }
 }
 
 // don't publish accounts-contracts unless explicitly requested.
 //def publishProjects = [project(":contracts"), project(":workflows")]
 def publishProjects = [project(":workflows")]
 
-
 configure(publishProjects) { subproject ->
-    apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.artifactory'
-
     task sourceJar(type: Jar, dependsOn: subproject.classes) {
-        classifier = 'sources'
+        archiveClassifier = 'sources'
         from sourceSets.main.allSource
     }
 
     task javadocJar(type: Jar, dependsOn: subproject.javadoc) {
-        classifier = 'javadoc'
+        archiveClassifier = 'javadoc'
         from javadoc.destinationDir
     }
 
@@ -131,27 +183,4 @@ configure(publishProjects) { subproject ->
             }
         }
     }
-}
-
-artifactory {
-    publish {
-        contextUrl = 'https://software.r3.com/artifactory'
-        repository {
-            repoKey = project.hasProperty("publishRepo") ? project.property("publishRepo") : ""
-            username = System.getenv('ARTIFACTORY_USERNAME') ?: System.getProperty('corda.artifactory.username')
-            password = System.getenv('ARTIFACTORY_PASSWORD') ?: System.getProperty('corda.artifactory.password')
-        }
-
-        defaults {
-            if (publishProjects.contains(project)) {
-                publications(project.name)
-            }
-        }
-    }
-}
-
-
-wrapper {
-    gradleVersion = "5.6"
-    distributionType = Wrapper.DistributionType.ALL
 }
